--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "functions": {
-    "server.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/server.js"
+      "destination": "/api"
     }
   ]
 }
